Create "blog" component and order management page. Adjust role handling.
Blog editor is a WYSIWYG editor based on draft.js. Ended up rendering
submitted posts in the same editor window but readonly and with controls
hidden to preserve styling. Need to implement editing functionality.
Probably a "display" toggle and the ability to schedule would also help.
Pictures are limited to ones already hosted but an upload handler
could be used to drop images on the server and respond with a link
to embed.

Order system currently consists of viewing orders, with a reject/confirm
option on the producer side and a cancel option on the retailer side.
Still need to implement order editing but unsure of how to proceed.
Also probably worth considering the issue of race conditions with
respects to order edits.

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <!-- Allow installing the app to the homescreen -->
   <meta name="mobile-web-app-capable" content="yes">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous"/>
+  <link rel="stylesheet" href="https://unpkg.com/react-table@5.5.3/react-table.css" crossorigin=""/>
   <link
   rel="stylesheet"
   href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
