Add basic front page. Move promotions & dashboards to sagas.
Also fixed follow buttons on feed and producer list to only
show loading when individually clicked.

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
   crossOrigin=""
   />
+  <link href="https://fonts.googleapis.com/css2?family=Yantramanav:wght@300;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.3/leaflet.draw.css" />
   <link rel="icon" href="/favicon.ico" />
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2miOUJXM46RVXR1KAWVL_Gz2-EAuOZpk&libraries=places"></script>
