Adjust homepage CTA to reveal input on click.
Form saves to local storage and is pulled back out once user
reaches the CreateProfilePage component.

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.3/leaflet.draw.css" />
   <link rel="icon" href="/favicon.ico" />
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2miOUJXM46RVXR1KAWVL_Gz2-EAuOZpk&libraries=places"></script>
-  <title>beerLocal - Home</title>
+  <title>BeerLocal - Home</title>
 </head>
 
 <body>
