--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
 
   <!-- Allow installing the app to the homescreen -->
   <meta name="mobile-web-app-capable" content="yes">
+
+  <meta property="og:image" content="./images/Homepage.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1024" />
+  <meta property="og:image:height" content="1024" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous"/>
   <link rel="stylesheet" href="https://unpkg.com/react-table@5.5.3/react-table.css" crossorigin=""/>
   <link
